--- a/css/style.css
+++ b/css/style.css
@@ -1,18 +1,62 @@
-*{
-    margin: 0;
-    padding: 0;
-}
-/* base */
-html, body{
-    width: 100%;
+
+#contenair{
+    background-image: linear-gradient(to bottom, rgb(5, 5, 143),rgb(5, 5, 143), rgb(23, 23, 78));
+    width: 100vw;
+    height: 100vh;
+    display: flex;
+    
+    justify-content: center;
 }
 
-.contenair{
+/* ------------------------halo------------------- */
+#halo{
+    height:800px;
+    width:600px;
+
+} 
+#centre{
+    stop-color: rgb(255,255,255);
+    stop-opacity: 1;
+}
+#ext{
+    stop-color: rgb(5,5,143);
+    stop-opacity: 1;
+}
+
+
+/* -------------------  logo Aformac ------------------ */
+
+
+#logoAformac{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
     position: absolute;
     top: 0;
-    bottom: 0;
-    width: 100%;
-    height: 100%;
-    background-image:linear-gradient(black, blue);
-    overflow: hidden;
+    z-index: 1;
+}
+
+#logo{
+    width: 800px;
+    height: auto;
+    margin-top: 80px;
+    margin-left: 110px;
+    margin-bottom: 50px;
+}
+#groupe{
+    width: 400px;
+    margin: auto;
+}
+#aformac{
+    width: 1000px;
+    margin-top: 90px;
+}
+
+/* -------------------------traineau ----------------------- */
+
+#traineau{
+    z-index: 2;
+    position: absolute;
+    top: 30%;
+    left: 15%;
 }
