--- a/css/style.css
+++ b/css/style.css
@@ -137,20 +137,15 @@ body {
     top: 8%;
     left: 45%;
     width: 20%;
-    transform: rotate(10deg);
+    transform: rotate(0deg);
     animation: traineau 4s infinite;
 }
 
 @keyframes traineau {
     0%{
-        transform: rotate(-45deg) scale(0);
-        top: 90%;
+        transform: rotate(0deg) scale(0);
+        top: 10%;
         left: 5%;
-    }
-    30%{
-        transform: rotate(-10deg) scale(1);
-        top: 20%;
-        left: 30%;
     }
     70%{
         transform: rotate(10deg) scale(1);
@@ -158,7 +153,7 @@ body {
         left: 45%;
     }
     100%{
-        transform: rotate(15deg) scale(0);
+        transform: rotate(10deg) scale(0);
         top: 20%;
         left: 90%;
     }
@@ -235,6 +230,9 @@ img{
     width: 8%;
     bottom: 20%;
     left: 120%;
+}
+.chausette:hover{
+    transform: rotate(150deg);
 }
 
 /*------------------------sapin et boules/*------------------------*/
@@ -330,4 +328,9 @@ img{
 polygon{
     fill:yellow;
 }
-
+#souhait{
+    position: absolute;
+    bottom: 7%;
+    font-size: 3em;
+    color: red;
+}
